--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,8 @@
         <module>inventory-service</module>
         <module>discovery-server</module>
         <module>api-gateway</module>
+        <module>notification-service</module>
+
     </modules>
 
     <properties>
@@ -46,6 +48,7 @@
                 <scope>import</scope>
             </dependency>
         </dependencies>
+
     </dependencyManagement>
 
     <build>
